# -nhs-data-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANELOG.MD  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  makefile  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  pr-checks.yml  release.yml
docker/: Dockerfile  Dockerfile.api  Dockerfile.dev  docker-compose.airflow.yml  docker-compose.prod.yml  docker-compose.yml  dockerignore  entrypoint.sh
docs/: api-reference.md  cohort-builder.md  data-dictionary.md  index.md  nlp-pipeline.md
docs/architecture/: architecture.md
docs/guides/: development-guide.md
nhs_dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
nhs_dbt/macros/: calculate_age.sql  classify_age_band.sql  classify_los.sql  cohort_builder.sql  omop_concept_lookup.sql
nhs_dbt/seeds/: ethnicity_codes.csv  icd10_codes.csv  london_hospitals.csv  omop_concept_mappings.csv  opcs4_codes.csv  snomed_codes.csv
orchestration/: README.md
orchestration/dags/: nhs_pipeline_dag.py  nhs_pipeline_flow.py
orchestration/tasks/: data_tasks.py
scripts/: generate_ci_seeds.py  script.py
src/api/: database.py  fhir_mapper.py  main.py  routes.py  schemas.py
src/ingestion/: generate_synthetic_data.py  load_to_duckdb.py
src/nlp/: clinical_entities.py  clinical_ner.py  run_pipeline.py
src/utils/: config.py
